--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav {
   flex-direction: column;
   align-items: center;
   width: 350px;
-  /* background-color: var(--main-color); */
+  background-color: var(--main-color);
 }
 
 .logo {
