--- a/style.css
+++ b/style.css
@@ -267,13 +267,6 @@ ol {
   flex-wrap: wrap;
 }
 
-.footer-contact h3 {
-  display: block;
-  width: 400px;
-  margin: 10px 30px 30px 0;
-  font-size: 30px;
-}
-
 .footer-contact img {
   width: 40px;
   height: 40px;
@@ -330,27 +323,18 @@ ol {
   }
 }
 
-.footer-contact h3 {
-  margin: 10px 100px 30px 0;
-}
-
 @media only screen and (max-width: 840px) {
   .logo {
     width: 180px;
     height: 180px;
   }
-
-  h1 {
-    font-size: 20px;
-  }
 }
 
 @media only screen and (max-width: 800px) {
 
-  /* .empty {
-    width: 100%;
-    height: 75px;
-  } */
+  main {
+    padding-top: 25px;
+  }
 
   .logo {
     margin-top: 5px;
@@ -359,10 +343,14 @@ ol {
   }
 
   nav {
-    margin: 0;
-    /* background-color: aqua; */
-    width: 100%;
+    border-radius: 20px;
+    box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    background-color: white;
+    bottom: 10px;
     flex-direction: row;
+    margin-right: 10px;
+    width: 95%;
+    /* opacity: 0.98; */
   }
 
   .navi {
@@ -372,39 +360,85 @@ ol {
   nav ul {
     margin: 0;
     flex-direction: row;
+    font-size: 20px;
     justify-content: space-around;
   }
 
   nav ul li {
-    background-color: rgb(9, 255, 0);
-    /* margin: 25px; */
+    margin: 0;
+  }
+
+  nav ul li a {
+    line-height: 58px;
+  }
+
+  .pictures div,
+  .pictures img {
+    width: 300px;
+    height: 300px;
+  }
+
+  .offer-div,
+  .execution-div,
+  .cooperation-div,
+  .footer-div,
+  .pictures,
+  .intro-text,
+  .footer-element {
+    justify-content: center;
+    width: 80%;
+  }
+
+  .intro,
+  .offer,
+  .execution,
+  .cooperation,
+  footer,
+  .pictures,
+  .intro-text {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .foto {
+    width: 200px;
+    height: 200px;
+  }
+
+  .description {
+    width: 170px;
+    height: 170px;
+  }
+
+  footer {
+    margin-bottom: 100px;
   }
 }
 
 @media only screen and (max-width: 592px) {
 
   nav ul {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   h2 {
     text-align: center;
   }
 
-  .execution-wrapper,
-  .footer-wrapper {
+  .execution-wrapper {
     justify-content: center;
   }
 
   .foto {
-    width: 170px;
-    height: 170px;
+    width: 200px;
+    height: 200px;
     margin: 10px;
   }
 
   .description {
     justify-content: flex-start;
     height: 125px;
+    margin: 10px;
   }
 
   .footer-element {
@@ -434,26 +468,10 @@ ol {
     font-size: 12px;
   }
 
-  .offer-div,
-  .execution-div,
-  .cooperation-div,
-  .footer-div,
-  .pictures,
-  .intro-text,
-  .footer-contact h3 {
-    justify-content: flex-end;
-    width: 50%;
-  }
-
   .pictures div,
   .pictures img {
-    width: 200px;
-    height: 200px;
-  }
-
-  .footer-contact h3 {
-    margin: 0 15px 15px 0;
-    font-size: 20px;
+    width: 250px;
+    height: 250px;
   }
 
   .footer-contact img {
@@ -467,6 +485,10 @@ ol {
   .pictures img {
     width: 170px;
     height: 170px;
+  }
+
+  .footer-wrapper {
+    justify-content: center;
   }
 }
 
