--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ html {
 
 body {
   --main-color: white;
-  --second-color: rgb(221, 221, 221);
-  /* background-color: rgb(228, 229, 233); */
+  --second-color: rgb(0, 0, 0);
 }
 
 .wrapper {
@@ -53,6 +52,8 @@ nav ul li {
 
 nav ul li a {
   border-bottom: 2px solid var(--main-color);
+  padding-bottom: 5px;
+  transition: border-bottom 0.4s;
 }
 
 nav ul li a:hover {
@@ -131,7 +132,7 @@ h2 {
 h3 {
   margin-bottom: 10px;
   font-size: 15px;
-  font-weight: 300;
+  font-weight: bold;
   line-height: 25px;
 }
 
@@ -186,10 +187,10 @@ ol {
   border-radius: 50%;
   color: white;
   cursor: pointer;
-  font-size: 64px;
-  line-height: 64px;
-  width: 64px;
-  height: 64px;
+  font-size: 44px;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
   position: fixed;
   right: 15%;
   top: 22px;
@@ -206,13 +207,13 @@ ol {
   border: none;
   border-radius: 50%;
   cursor: pointer;
-  font-size: 64px;
-  height: 64px;
-  line-height: 64px;
+  font-size: 44px;
+  height: 44px;
+  line-height: 44px;
   position: absolute;
   top: 50%;
   transition: opacity 0.3s;
-  width: 64px;
+  width: 44px;
 }
 
 .popup__close,
@@ -276,10 +277,17 @@ ol {
 .footer-contact h2 {
   font-size: 18px;
   font-weight: 300;
-  /* text-align: center; */
+}
+
+p {
+  text-align: justify;
 }
 
 @media only screen and (max-width: 850px) {
+
+  .wrapper p {
+    font-size: 14px;
+  }
 
   .wrapper {
     width: 95%;
@@ -350,7 +358,6 @@ ol {
     flex-direction: row;
     margin-right: 10px;
     width: 95%;
-    /* opacity: 0.98; */
   }
 
   .navi {
@@ -421,10 +428,6 @@ ol {
     font-size: 16px;
   }
 
-  h2 {
-    text-align: center;
-  }
-
   .execution-wrapper {
     justify-content: center;
   }
@@ -436,7 +439,7 @@ ol {
   }
 
   .description {
-    justify-content: flex-start;
+    justify-content: center;
     height: 125px;
     margin: 10px;
   }
@@ -446,12 +449,6 @@ ol {
     margin-right: 0px;
   }
 
-  .footer-contact h3 {
-    text-align: center;
-    margin: 0 0 15px 0;
-    font-size: 20px;
-  }
-
   .footer-contact img {
     margin: 0 15px 30px 15px;
   }
@@ -459,6 +456,13 @@ ol {
   .fb,
   .ig {
     width: 80px;
+  }
+}
+
+@media only screen and (max-width: 539px) {
+
+  .description p {
+    text-align: center;
   }
 }
 
@@ -485,10 +489,6 @@ ol {
   .pictures img {
     width: 170px;
     height: 170px;
-  }
-
-  .footer-wrapper {
-    justify-content: center;
   }
 }
 
