--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ p {
   .footer-contact h3 {
     justify-content: flex-end;
     width: 60%;
+    margin: 5px 20px 20px 20px;
   }
 
   .pictures {
