--- a/style.css
+++ b/style.css
@@ -284,6 +284,11 @@ p {
   text-align: justify;
 }
 
+span {
+  display: block;
+  margin-bottom: 16px;
+}
+
 .footer-element .copyright {
   font-size: 12px;
   color: rgb(143, 143, 143);
