--- a/style.css
+++ b/style.css
@@ -269,15 +269,15 @@ ol {
   flex-wrap: wrap;
 }
 
-.footer-contact img {
+.footer-contact a {
+  color: black;
+  display: block;
+  text-decoration: none;
+  font-size: 26px;
+  font-weight: 500;
   width: 40px;
   height: 40px;
   margin: 0 30px 30px 30px;
-}
-
-.footer-contact h2 {
-  font-size: 18px;
-  font-weight: 300;
 }
 
 p {
