add svg icons in footer

--- a/style.css
+++ b/style.css
@@ -269,15 +269,11 @@ ol {
   flex-wrap: wrap;
 }
 
-.footer-contact a {
-  color: black;
-  display: block;
-  text-decoration: none;
-  font-size: 26px;
-  font-weight: 500;
-  width: 40px;
+.footer-contact img {
+  cursor: pointer;
   height: 40px;
-  margin: 0 30px 30px 30px;
+  width: 40px;
+  margin: 0 50px 30px 0;
 }
 
 p {
@@ -293,6 +289,12 @@ span {
   font-size: 12px;
   color: rgb(143, 143, 143);
   margin-bottom: 15px;
+}
+
+.copyright a {
+  cursor: pointer;
+  text-decoration: none;
+  color: rgb(143, 143, 143);
 }
 
 @media only screen and (max-width: 850px) {
